methods.picture.PatternPicture.scala.code
override def run() {
}

def faireTraitRV(c: Color):

	avance()


def marquerSol(){
	baisseBrosse()
	leveBrosse()